shous the new array as a <ul> list

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
       </div>
 
       <div id = "yourArray">
-        <p>Your array is <span class = "myArray"></span></p>
+        <p>Your array is: </p>
+        <ul>
+          <li><span class = "firstElement"></span></li>
+          <li><span class = "secondElement"></span></li>
+          <li><span class = "thirdElement"></span></li>
+        </ul>
       </div>
 
       
